<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/app_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <View
        android:id="@+id/overlayView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80FFFFFF"
        android:visibility="gone"
        android:elevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="15dp"
        android:indeterminateDuration="1000"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_logo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/latobold"
        android:letterSpacing="0.1"
        android:lineHeight="30dp"
        android:text="@string/kabir_imitation_and_jewellery"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/latolight"
        android:text="@string/experience_the_beauty_within"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/latobold"
        android:text="@string/sign_up_here"
        android:textColor="@color/lavenderDark"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/nameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/user_02"
        android:drawablePadding="10dp"
        android:elevation="10dp"
        android:ems="10"
        android:fontFamily="@font/latoregular"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingVertical="12dp"
        android:paddingStart="14dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/mail_02"
        android:drawablePadding="10dp"
        android:elevation="10dp"
        android:ems="10"
        android:fontFamily="@font/latoregular"
        android:hint="@string/email_or_phone_number"
        android:inputType="textEmailAddress"
        android:paddingVertical="12dp"
        android:paddingStart="14dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/nameEt"
        app:layout_constraintStart_toStartOf="@+id/nameEt"
        app:layout_constraintTop_toBottomOf="@+id/nameEt" />

<!--    <EditText-->
<!--        android:id="@+id/passwordEt"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginHorizontal="25dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:background="@drawable/edit_text_background"-->
<!--        android:drawableStart="@drawable/lock_01"-->
<!--        android:drawablePadding="10dp"-->
<!--        android:elevation="10dp"-->
<!--        android:ems="10"-->
<!--        android:fontFamily="@font/latoregular"-->
<!--        android:hint="@string/password"-->
<!--        android:inputType="textPassword"-->
<!--        android:paddingVertical="12dp"-->
<!--        android:paddingStart="14dp"-->
<!--        android:textSize="14sp"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/emailEt"-->
<!--        app:layout_constraintStart_toStartOf="@+id/emailEt"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/emailEt" />-->


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/emailEt"
        app:layout_constraintStart_toStartOf="@+id/emailEt"
        app:layout_constraintTop_toBottomOf="@+id/emailEt"
        app:passwordToggleEnabled="true"
        android:layout_marginHorizontal="25dp"
        android:elevation="10dp"
        android:textColorHint="@color/black"
        android:outlineSpotShadowColor="@color/black"
        android:layout_marginTop="16dp"
        app:boxBackgroundMode="none"
        android:background="@drawable/edit_text_background"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/lock_01"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/latoregular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingVertical="12dp"
            android:paddingStart="14dp"
            android:textSize="14sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createAcBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/login_btn_shape"
        android:elevation="10dp"
        android:paddingHorizontal="60dp"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/passwordTextInput"
        app:layout_constraintStart_toStartOf="@+id/passwordTextInput"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextInput" />

    <TextView
        android:id="@+id/alreadyAccountTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/lavenderDark"
        app:layout_constraintEnd_toEndOf="@+id/createAcBtn"
        app:layout_constraintStart_toStartOf="@+id/createAcBtn"
        app:layout_constraintTop_toBottomOf="@+id/createAcBtn" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/latolight"
        android:text="@string/design_by_nsk_brothers"
        android:textAlignment="center"
        android:textColor="@color/lavenderDark"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>